@@ -5,6 +5,8 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+  - 20-12-2004 fixed: Video Database bug introduced in the last update(s).
+  - 20-12-2004 fixed: IMDb changed their site + urls today. XBMC updated to suit.
   - 20-12-2004 fixed: serious bug in HTTP requests that result in  XBMC ignoring some responses without Content-Length header.
   - 20-12-2004 added: XLink Kai app specific fail-safe mode, delete kai-vectors.xml in XBMC dir to enable.
   - 20-12-2004 added: support for multiple subtitles, with language extension ie: filename.eng.sub (needs new mplayer.dll)
